--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Survey form</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/projects/Survey Form/style.css" />
+    <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
